<resources>
    <string name="app_name">Gaia</string>
    <string name="registrate"><u>Regístrate</u></string>
    <string name="iniciar_sesion">INICIAR SESIÓN</string>
    <string name="imagen_fondo">Imagen fondo</string>
    <string name="contrasena_olvidada"><u>¿Contraseña olvidada?</u></string>
    <string name="bienvenido">Bienvenido</string>
    <string name="continuar_google">Continuar con Google</string>
    <string name="correo_electronico">Correo electrónico</string>
    <string name="contrasena">Contraseña</string>
    <string name="titulo_producto">Título del producto</string>
    <string name="icono_menu">icono_menu</string>
    <string name="icono_locacion">icono_locación</string>
    <string name="icono_carrito_compra">icono_carrito_compra</string>
    <string name="imagen_producto">imagen_producto</string>
    <string name="precio_producto">$0</string>
    <string name="descripcion">Descripción</string>
    <string name="icono_mas">icono_mas</string>
    <string name="ingredientes">Ingredientes</string>
    <string name="anadir_al_carrito">Añadir al carrito</string>
    <string name="lanzamiento">Lanzamiento</string>
    <string name="recupera_contrasena">Recupera tu contraseña</string>
    <string name="recuperar">Recuperar</string>
    <string name="categorias">Categorias</string>
    <string name="fragancias">Fragancias</string>
    <string name="text_description">Formulado con una base 100% vegetal y enriquecido con la nutritiva manteca de Karité.</string>
    <string name="text_description_p2">Está formulado sin aceite de Palma y enriquecido con extracto de Karité, el cual tiene propiedades suavizantes y nutritivas.</string>
    <string name="text_description_p3">99% ingredientes de origen natural.</string>
    <string name="text_description_p4">Producto para toda la familia.</string>
    <string name="text_members_t1">MANTECA DE KARITÉ ORGÁNICA</string>
    <string name="text_members_p1">Rica en ácidos grasos insaponificables, la manteca de karité es un ingrediente de belleza ideal para hidratar, nutrir, proteger, regenerar y ayudar con la cicatrización.</string>
    <string name="text_members_t2">LECHE DE KARITÉ</string>
    <string name="text_members_p2">Conocida por sus propiedades hidratantes, nutritivas y protectoras.</string>
    <string name="text_members_t3">ACEITE DE COCO</string>
    <string name="text_members_p3">Rico en ácidos grasos, ayuda a nutrir, suavizar y proteger la piel y el cabello</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="nuevo_por_aqui">¿Nuevo por aqui?</string>
    <string name="texto_registro_3">¡Completa tu registro y descubre ofertas especiales para ti!</string>
    <string name="agregar_foto_de_perfil">Agregar foto de perfil</string>
    <string name="agregar_foto">Agregar foto</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="e_mail">E-mail</string>
    <string name="texto_caracteres_especiales">✓ Tener al menos un carácter especial (ej.: “@“ “#” “%”)</string>
    <string name="texto_restriccion_numeros">✓ Tener al menos un número (0 al 9)</string>
    <string name="texto_restriccion_letra_may">✓ Tener al menos una letra mayúscula (ABC)</string>
    <string name="texto_restriccion_letra_min">✓ Tener al menos una letra minúscula (abc)</string>
    <string name="texto_cantidad_caracteres">✓ Tener al menos 8 caracteres</string>
    <string name="confirmar_contrasena">Confirmar contraseña</string>
    <string name="telefono">Teléfono</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>
    <string name="genero_opcional">Género (Opcional)</string>
    <string name="registrarse">Registrarse</string>
    <string name="explicacion_email">Campo para ingresar el email</string>
    <string name="maquillaje">Maquillaje</string>
    <string name="labial_hidratante">Labial Hidratante</string>
    <string name="cuidados_diarios">Cuidados Diarios</string>
    <string name="eau_de_toilette_spray">Eau de Toilette Spray</string>
    <string name="_50_ml">50 ml</string>
    <string name="_50_000">$ 50.000</string>
    <string name="tu_carrito">Tu carrito</string>
    <string name="desodorante_roll_on">Desodorante Roll-on</string>
    <string name="quitar"><u>Quitar</u></string>
    <string name="eau_de_parfum">Eau De Parfum</string>
    <string name="Todo">todo</string>
    <string name="tu_carrito1">Tu Carrito</string>
    <string name="_64_000_00">$ 64.000,00</string>
    <string name="tarifas_de_env_o_estimadas">Tarifas de envío estimadas</string>
    <string name="pais_regi_n">Pais/Región</string>
    <string name="ciudad_provincia">Ciudad/provincia</string>
    <string name="colombia">Colombia</string>
    <string name="bogot">Bogotá</string>
    <string name="subtotal">Subtotal:</string>
    <string name="_64_000_00_cop">$ 64.000,00 COP</string>
    <string name="tarifa_16_000_00">Tarifa: $ 16.000,00</string>
    <string name="recuerda_que_nuestros_tiempos_de_entrega_se_establecen_entre_los_4_y_15_d_as_h_biles_despu_s_de_la_compr">Recuerda que nuestros tiempos de entrega se establecen entre los 4 y 15 días hábiles después de la comprá</string>
    <string name="quitars">Quitar</string>
    <string name="_1"><![CDATA[< 1 >]]></string>
    <string name="calcular">Calcular</string>
    <string name="pagar_pedido">Pagar Pedido</string>
    <string name="todo">TODO</string>
    <string name="todos">TODO</string>
    <string name="todi">TODO</string>
    <string name="todoo">TODO</string>
    <string name="todito">TODO</string>
    <string name="desodorante_rollon">Desodorante Roll-on</string>
    <string name="_64_00000">$ 64.000,00</string>
    <string name="_1_quitar"><![CDATA[< 1 > Quitar]]></string>
    <string name="eau_de_toilette_sprey">Eau de Toilette Spray</string>
    <string name="_50_00000">$ 50.000,00</string>
    <string name="_2_quitar"><![CDATA[<2> Quitar]]></string>
    <string name="tarifa_de_env_o_estimadas">Tarifa de envío estimadas</string>
    <string name="todoooo">TODO</string>
    <string name="todooooooooo">TODO</string>
    <string name="colombian">Colombia</string>
    <string name="bogota">Bogotá</string>
    <string name="paisregion">Pais / Región</string>
    <string name="paisregi_n">Pais / Región</string>
    <string name="ciudadprovincia">Ciudad / Provincia</string>
    <string name="calculare">Calcular</string>
    <string name="pagarpedido">Pagar Pedido</string>
    <string name="subtotall">Subtotal</string>
    <string name="_164_000_00_cop">$ 164.000,00 COP</string>
    <string name="recuerda_que_nuestros_tiempos_de_entrega_se_establecen_entre_los_4_y_15_d_as_h_biles_despu_s_de_la_compra">Recuerda que: nuestros tiempos de entrega se establecen entre los 4 y 15 días hábiles después de la compra</string>
    <string name="todoooooooooooooo">TODO</string>
    <string name="todooooooooooooooooooooo">TODO</string>
    <string name="todoooooooooooooooooooooooo">TODO</string>
    <string name="Maquillaje">TODO</string>
    <string name="maquillajes">Maquillaje</string>
    <string name="categor_as">Categorías</string>
    <string name="tododito">TODO</string>
    <string name="cuidadosdiarios">Cuidados Diarios</string>
    <string name="fragancia">Fragancias</string>
    <string name="labialhidratante">Labial Hidratante</string>
    <string name="blsamo_labial">Bálsamo Labial</string>
    <string name="glosslabial">Gloss Labial</string>
    <string name="jabn">Jabón</string>
    <string name="exfoliante">Exfoliante</string>
    <string name="desodorante">Desodorante</string>
    <string name="barrera_solar_mineral">Barrera Solar Mineral</string>
    <string name="eau_de_toilette">Eau De Toilette</string>
    <string name="eau_de_perfum">Eau de perfum</string>
    <string name="perfume">Perfume</string>
    <string name="todiii">TODO</string>
    <string name="todoiiio">TODO</string>
    <string name="iconoflecha">TODO</string>
    <string name="Ubicacion">TODO</string>
    <string name="barras">TODO</string>
    <string name="degradado">TODO</string>
    <string name="encuentra_tu_tienda">Encuentra tu tienda</string>
    <string name="direccion">Carrera 15 # 124-30, Piso 1 - Local 25\nCentro Comercial Unicentro\nBogotá, Colombia</string>
    <string name="horarios">Horarios:\nLunes a Sábado: 10:00 a.m. a 8:00 p.m. |\nDomingos y Festivos 11:00 a.m. a 7:00 p.m.</string>
    <string name="contacto">Contacto: +57 300757575</string>
    <string name="simbolodemas">TODO</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="botoncarrito">botoncarrito</string>
    <string name="botonubicacion">botonubicacion</string>
    <string name="botonmenu">botonmenu</string>
    <string name="titulogenerico">titulogenerico</string>
    <string name="logogaia">logogaia</string>
    <string name="fondodegrado">fondodegrado</string>
    <string name="background">background</string>
    <string name="tarifa">Tarifa:</string>
    <string name="flecha_menos_producto">flecha_menos_producto</string>
    <string name="flecha_mas_producto">flecha_mas_producto</string>
    <string name="ciudad">Ciudad</string>
    <string name="_16_000_000">$16.000,000</string>
    <string name="mi_cuenta">Mi Cuenta</string>
    <string name="guardar">Guardar</string>
    <string name="btnmicuenta">btnmicuenta</string>
    <string name="eliminar">eliminar</string>
    <string name="eliminar_cuenta">Eliminar cuenta</string>
    <string name="nombre_del_producto">Nombre del Producto</string>
    <string name="cantidad_producto">100</string>
    <string name="total">Total:</string>
    <string name="no_disponible">No disponible</string>
    <string name="expandir_o_contraer">expandir_o_contraer</string>
    <string name="nombre_del_productos">nombre_del_productos</string>
    <string name="_0_000">_0_000</string>
    <string name="imagen_logo">imagen_logo</string>
    <string name="iconno_menu">iconno_menu</string>
    <string name="descripcion_producto">Descripcion del producto</string>
    <string name="pa_s">País</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="ver_galer_a">Ver Galería</string>
    <string name="imagencamara">TODO</string>
    <string name="abrir_c_mara">Abrir cámara</string>
    <string-array name="lista_paises">
        <item>Seleccione una opción</item>
        <item>Colombia</item>
        <item>Argentina</item>
        <item>Brasil</item>
    </string-array>
    <string-array name="ciudades_colombia">
        <item>Seleccione una opción</item>
        <item>Bogotá</item>
        <item>Medellín</item>
        <item>Cali</item>
    </string-array>
    <string-array name="ciudades_argentina">
        <item>Seleccione una opción</item>
        <item>Buenos Aires</item>
        <item>Córdoba</item>
        <item>Rosario</item>
    </string-array>
    <string-array name="ciudades_brasil">
        <item>Seleccione una opción</item>
        <item>São Paulo</item>
        <item>Rio de Janeiro</item>
        <item>Belo Horizonte</item>
    </string-array>
</resources>