<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="ExtraText">

        <!-- Incluir el layout base con fondo y cabecera -->
        <include
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <!-- Aquí va el contenido específico de esta activity -->

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            android:src="@drawable/fondo2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/fondodegrado"
            app:srcCompat="@drawable/degradado_mascara"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:fontFamily="@font/alata"
            android:text="@string/titulogenerico"
            android:textColor="@color/green"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView19" />

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="222dp"
            android:layout_height="81dp"
            android:layout_marginTop="4dp"
            android:contentDescription="@string/logogaia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/logo2" />

        <ImageButton
            android:id="@+id/btnCarrito"
            android:layout_width="26dp"
            android:layout_height="33dp"
            android:layout_marginStart="52dp"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:contentDescription="@string/botoncarrito"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_cart_shopping"
            app:layout_constraintStart_toEndOf="@+id/imageView19"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/green" />

        <ImageButton
            android:id="@+id/botonubicacion"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="24dp"
            android:background="@null"
            android:contentDescription="@string/botonubicacion"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_location_pin"
            app:layout_constraintStart_toEndOf="@+id/imageView19"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/green"
            tools:ignore="DuplicateIds" />

        <ImageButton
            android:id="@+id/btn_menu"
            android:layout_width="33dp"
            android:layout_height="34dp"
            android:background="@null"
            android:contentDescription="@string/botonmenu"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_menu_lines"
            app:tint="@color/green"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="24dp" />



    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>