<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Fondo -->
    <ImageView
        android:id="@+id/iv_fondo_imagen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/imagen_fondo"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Degradado encima del fondo -->
    <View
        android:id="@+id/v_fondo_color"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/degradado_mascara"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Logo, menú, íconos -->
    <ImageView
        android:id="@+id/iv_main_logo"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/imagen_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <ImageView
        android:id="@+id/btn_menu"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/iconno_menu"
        android:src="@drawable/ic_menu_lines"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/green" />

    <ImageView
        android:id="@+id/btn_location"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/icono_locacion"
        android:src="@drawable/ic_location_pin"
        app:layout_constraintEnd_toStartOf="@+id/btn_cart"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/green" />

    <ImageView
        android:id="@+id/btn_cart"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/icono_carrito_compra"
        android:src="@drawable/ic_cart_shopping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/green" />

    <!-- Título -->
    <TextView
        android:id="@+id/tv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alata"
        android:paddingHorizontal="15dp"
        android:text="@string/categorias"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_main_logo" />

    <!-- RecyclerView de productos -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerProductos"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_titulo" />

</androidx.constraintlayout.widget.ConstraintLayout>