<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/borde_item"> <!-- opcional, puedes poner un fondo -->

    <ImageView
        android:id="@+id/imagenProducto"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/imagen_producto" />

    <TextView
        android:id="@+id/nombreProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nombre_del_productos"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toTopOf="@+id/imagenProducto"
        app:layout_constraintStart_toEndOf="@+id/imagenProducto"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/precioProducto"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/_0_000"
        android:textSize="14sp"
        android:textColor="@android:color/darker_gray"
        android:layout_marginStart="12dp"
        app:layout_constraintTop_toBottomOf="@+id/nombreProducto"
        app:layout_constraintStart_toEndOf="@+id/imagenProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imagenProducto" />

</androidx.constraintlayout.widget.ConstraintLayout>