<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Inicio fondo-->

    <ImageView
        android:id="@+id/iv_fondo_imagen"
        android:layout_width="740dp"
        android:layout_height="460dp"
        android:contentDescription="@string/imagen_fondo"
        android:scaleType="centerCrop"
        android:translationY="-25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/fondo1" />

    <View
        android:id="@+id/v_fondo_color"
        android:layout_width="410dp"
        android:layout_height="735dp"
        android:background="@drawable/degradado_mascara"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--Fin fondo -->

    <!-- Inicio Header -->

    <ImageView
        android:id="@+id/btn_menu"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/icono_menu"
        android:src="@drawable/ic_menu_lines"
        app:layout_constraintEnd_toStartOf="@+id/img_main_logo"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/green" />

    <ImageView
        android:id="@+id/img_main_logo"
        android:layout_width="140dp"
        android:layout_height="110dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/imagen_fondo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <ImageView
        android:id="@+id/btn_location"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/icono_locacion"
        android:src="@drawable/ic_location_pin"
        app:layout_constraintStart_toEndOf="@+id/img_main_logo"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/green" />

    <ImageView
        android:id="@+id/btn_cart"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/icono_carrito_compra"
        android:src="@drawable/ic_cart_shopping"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn_location"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/green" />

    <!-- Fin Header -->

    <TextView
        android:id="@+id/tv_categoria"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/alata"
        android:text="@string/fragancias"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_main_logo" />

    <!-- Inicio Tarjeta producto -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_product"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_categoria">

        <!-- Contenido de la tarjeta -->
        <TextView
            android:id="@+id/tv_texto_tarjeta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contenido de la tarjeta"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Borde inferior -->
        <View
            android:id="@+id/borde_inferior_tarjeta"
            android:layout_width="0dp"
            android:layout_height="2dp"
            android:layout_marginTop="8dp"
            android:background="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_texto_tarjeta" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Fin Tarjeta producto -->

</androidx.constraintlayout.widget.ConstraintLayout>